2006-12-30  Don Allingham  <don@gramps-project.org>

	* C/gramps.xml: start the rework of the key binding sections

2006-12-21  Lubo Vasko  <pgval@inMail.sk>
	* sk/sk.po: Translation update.
	* sk/figures/reorder.png: Add figure.

2006-12-19  Lubo Vasko  <pgval@inMail.sk>
	* sk/sk.po: Translation update.

2006-12-15  Erik De Richter  <erik.de.richter@be.gm.com>
	* C/gramps.xml: fix typo

2006-11-13  Jérôme Rapinat  <romjerome@yahoo.fr>
	* fr/fr.po: Translation update
	* gramps.pot: update template

2006-12-12  Don Allingham  <don@gramps-project.org>
	* C/gramps.xml: typos

2006-12-11  Alex Roitman  <shura@gramps-project.org>
	* C/gramps.xml: Typos.

2006-12-10  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>
	* C/gramps.xml: Name Display section updated.

2006-12-08  Alex Roitman  <shura@gramps-project.org>
	* C/gramps.xml: Typo.

2006-12-01  Alex Roitman  <shura@gramps-project.org>
	* sk/sk.po: Typo.

2006-11-29  Lubo Vasko  <pgval@post.sk>
	* sk/sk.po: Translation update.

2006-11-23  Jérôme Rapinat  <romjerome@yahoo.fr>
	* fr/fr.po: Translation update.
	* fr/figures/reorder.png: Add image not yet on Makefile.am
	* fr/figures/family.png: Update figure
	* gramps.pot: update template

2006-11-22  Don Allingham  <don@gramps-project.org>
	* C/figures/family.png: updated
	* C/figures/reorder.png: new image
	* C/gramps.xml: updates

2006-11-09  Alex Roitman  <shura@gramps-project.org>
	* nb/gramps.xml: Remove autogenerated file.
	* nb/.xml2po.mo: Remove autogenerated file.

2006-11-07  Lubo Vasko  <pgval@post.sk>
	* sk/sk.po: Translation update.
	* sk/figures/*.png: Add figures.

2006-11-06  Alex Roitman  <shura@gramps-project.org>
	* Makefile.am (DOC_LINGUAS): Enable Slovak manual.

2006-11-06  Lubo Vasko  <pgval@post.sk>
	* sk/sk.po: Manual translation.

2006-11-05  Espen Berg <espen.berg@ntnu.no>
	* Makefile.am (DOS_LINGUAS): Enable Norwegian manual
	* nb/: Added the start of a Norwegian translation of the user manual
